# rizwold-utils

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  Cargo.toml  build
.github/workflows/: ci.yml  deploy.yml
calendar/: Cargo.toml
calendar-db/: Cargo.toml
calendar-db/src/: lib.rs  main.rs  types.rs
calendar-db/src/repository/: mod.rs  sqlite.rs
calendar-db/src/repository/migrations/sqlite/: 1.up.sql
calendar-db/src/repository/queries/sqlite/: select_event_exceptions.sql  select_events.sql
calendar/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
garbage/: .pre-commit-config.yaml  Cargo.toml  README.md  make-readme
garbage/src/: calendar.rs  lib.rs  main.rs
garbage/src/ir_client/: mod.rs  schedule.rs
postgang/: .pre-commit-config.yaml  Cargo.toml  README.md  make-readme
postgang/src/: calendar.rs  lib.rs  main.rs
postgang/src/bring_client/: mailbox_delivery_dates.rs  mod.rs
