[workspace]
members = ["calendar", "cli", "garbage", "postgang"]
resolver = "3"

[workspace.dependencies]
ureq = { version = "3.1", default-features = false, features = [
  "rustls",
  "json",
] }
chrono = { version = "0.4", default-features = false, features = [
  "serde",
  "clock",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
git-version = "0.3"
uuid = { version = "1.20.0", features = ["v5"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-log = "0.2.0"
ics = { version = "=0.5.8", default-features = true }
url = { version = "2.5.8", default-features = false }

[workspace.lints.rust]
# unsafe_code = "forbid"
# unknown_lints = "forbid"
# elided_lifetimes_in_paths = "forbid"
# unused_imports = "deny"
# warnings = "deny"
# unused = { level = "deny", priority = -1 }
# nonstandard-style = "deny"
# future-incompatible = "deny"
# rust-2024-compatibility = "deny"
unsafe_code = "warn"
unknown_lints = "warn"
elided_lifetimes_in_paths = "warn"
unused_imports = "warn"
warnings = "warn"
unused = { level = "warn", priority = -1 }
nonstandard-style = "warn"
future-incompatible = "warn"
rust-2024-compatibility = "warn"

[workspace.lints.clippy]
# nursery = { level = "warn", priority = -1 }
# pedantic = { level = "warn", priority = -1 }
# correctness = { level = "deny", priority = -1 }
# std_instead_of_core = "deny"
# alloc_instead_of_core = "deny"
# missing_panics_doc = "allow"
# module_name_repetitions = "allow"
# missing_const_for_fn = "deny"
# option_if_let_else = "deny"
# use_self = "deny"
# redundant_clone = "deny"
# unwrap_used = "deny"
# disallowed-methods = "deny"
# std_instead_of_alloc = "deny"
# complexity = { level = "deny", priority = -1 }
# or_fun_call = "deny"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
std_instead_of_core = "warn"
alloc_instead_of_core = "warn"
missing_panics_doc = "warn"
module_name_repetitions = "warn"
missing_const_for_fn = "warn"
option_if_let_else = "warn"
use_self = "warn"
redundant_clone = "warn"
unwrap_used = "warn"
disallowed-methods = "warn"
std_instead_of_alloc = "warn"
complexity = { level = "warn", priority = -1 }
or_fun_call = "warn"

[profile.release]
opt-level = 'z'   # Optimize for size
strip = true      # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
panic = "abort"
