[package]
name = "cli"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "rizwold"
path = "src/main.rs"

[dependencies]
garbage = { path = "../garbage" }
postgang = { path = "../postgang" }
clap = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
chrono = { workspace = true }
git-version = { workspace = true }

[lints]
workspace = true
